--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,107 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/*----------------Base Header - Footer Styles----------*/   
+header, footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
 
+header nav {
+  display: flex;
+  justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: rpw wrap;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;/*Puts space between the social icons*/
+  /*Does not wrap around*/
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*-----------------Mobile Styles - Homepage-----------------*/
+/*Hero Area*/
+.hero-area {
+  display: flex;
+  justify-content: center; /*I think this doesn't have align-items: center because it has text tha is left aligned.*/
+  flex-flow: wrap;
+}
+/*Aside*/
+aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+/*Features*/
+.features {
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap;
+}
+
+.features-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+/*Reviews*/
+.reviews {
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap;
+}
+/*----------------About Page--------------------------*/
+.mission {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+/*------------------------FAQ Page-------------------------*/
+.faq {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
+
+.faq .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: wrap;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
