--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,12 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*----------------Base Header - Footer Styles----------*/   
+/*----------------Base Header - Footer Styles----------*/  
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 header, footer {
   display: flex;
   justify-content: center;
@@ -94,11 +99,22 @@ header, footer {
   flex-flow: row wrap;
 }
 
+header {
+  padding: 15px 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+}
+
 header nav {
   display: flex;
   justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header .content-wrapper {
@@ -106,11 +122,30 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: rpw wrap;
+  margin: 0; /*Gives elements with paragraphs a 0 margin so the browser won't give it its default margin and make the site look "off".*/
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -124,6 +159,10 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
 }
 
 /*-----------------Mobile Styles - Homepage-----------------*/
@@ -147,18 +186,42 @@ aside {
   flex-flow: wrap;
 }
 
-.features-items {
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: wrap;
 }
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
+.features p {
+  margin: 0;
+} 
+
 /*Reviews*/
 .reviews {
   display: flex;
   justify-content: center;
   flex-flow: wrap;
 }
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
+}
+
 /*----------------About Page--------------------------*/
 .mission {
   display: flex;
@@ -173,6 +236,11 @@ aside {
   align-items: center;
   flex-flow: wrap;
 }
+
+.contact-content p {
+  margin: 0;
+}
+
 /*------------------------FAQ Page-------------------------*/
 .faq {
   display: flex;
@@ -186,6 +254,15 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: wrap;
+  margin: 50px 0 0 0;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 /* ==========================================================================
    Helper classes
