--- a/css/main.css
+++ b/css/main.css
@@ -86,11 +86,13 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*----------------Base Header - Footer Styles----------*/  
+ 
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
 }
+
+/*----------------Base Header - Footer Styles----------*/ 
 
 header, footer {
   display: flex;
@@ -103,7 +105,15 @@ header {
   padding: 15px 0;
 }
 
-.header-divider {
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: rpw wrap;
+  margin: 0;
+}
+
+.header-divider  {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
@@ -115,14 +125,6 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
-}
-
-header .content-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: rpw wrap;
-  margin: 0; /*Gives elements with paragraphs a 0 margin so the browser won't give it its default margin and make the site look "off".*/
 }
 
 header nav ul {
@@ -151,8 +153,7 @@ footer .contact {
 footer .social-icons {
   display: flex;
   justify-content: space-around;
-  align-items: center;/*Puts space between the social icons*/
-  /*Does not wrap around*/
+  align-items: center;/*Puts space between the social icons; does not wrap around*/
 }
 
 footer .social-icons p {
@@ -166,20 +167,26 @@ footer .copyright {
 }
 
 /*-----------------Mobile Styles - Homepage-----------------*/
+
 /*Hero Area*/
+
 .hero-area {
   display: flex;
-  justify-content: center; /*I think this doesn't have align-items: center because it has text tha is left aligned.*/
-  flex-flow: wrap;
+  justify-content: center; /*I think this doesn't have align-items: center because it has text that is left aligned.*/
+  flex-flow: row wrap;
 }
+
 /*Aside*/
+
 aside {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
 }
+
 /*Features*/
+
 .features {
   display: flex;
   justify-content: center;
@@ -190,16 +197,16 @@ aside {
   margin-bottom: 60px;
 }
 
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap;
-}
-
-.features article {
-  width: 63%;
-  margin: 30px 0;
+  flex-flow: row wrap;
 }
 
 .features p {
@@ -207,6 +214,7 @@ aside {
 } 
 
 /*Reviews*/
+
 .reviews {
   display: flex;
   justify-content: center;
@@ -227,14 +235,14 @@ aside {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
 }
 
 .contact-content p {
@@ -246,14 +254,14 @@ aside {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
 }
 
 .faq .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
   margin: 50px 0 0 0;
 }
 
@@ -351,19 +359,141 @@ aside {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+@media only screen and (min-width: 768px) {
+  
+  /*Tablet styles here*/
+  
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+  /*Header*/
+
+  header {
+    justify-content: space-around;
+    padding: 33px 0;
+  }
+
+  header .content-wrapper {
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  .header-divider {
+    display: none;
+  }
+
+  /*Hero Area*/
+
+  /*Aside*/
+
+  aside .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    margin: 50px 0;
+  }
+
+  aside .content-wrapper .form-description, aside .content-wrapper .form {
+    width: 40%;
+    margin: 0;
+  }
+
+  /*Features*/
+
+  .features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+
+  .features .features-item-description {
+    width: 50%;
+  }
+
+  /*Reviews*/
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div {
+    width: 49%;
+  }
+
+  /*Footer*/
+
+  footer .content-wrapper {
+    width: 65%;
+    margin: 100px 0;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+/********************ABOUT PAGE***********************/
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+  }
+
+  .mission-content p {
+    width: 45%;
+  }
+
+  .contact-section .content-wrapper h2 {
+    width: 80%;
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+/************************FAQ PAGE*************************/
+ .faq .content-wrapper {
+   justify-content: space-between;
+ } 
+
+ .faq-content {
+   flex-basis: 45%;
+ }
+
+ .faq h2 {
+   width: 100%;
+ }
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width: 1200px) {
+  /*Desktop styles here*/
 }
 
-/* ==========================================================================
+  /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
