--- a/css/main.css
+++ b/css/main.css
@@ -128,11 +128,11 @@ p {
 }
 
 img {
-
+  width: 100%;
 }
 
 figure {
-
+  margin: 0;
 }
 
 address {
@@ -166,6 +166,14 @@ header .content-wrapper {
   margin: 0;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .header-divider  {
   width: 100%;
   height: 1px;
@@ -188,6 +196,10 @@ header nav ul {
   display: flex;
   justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
   width: 100%;
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 
 footer {
@@ -232,6 +244,9 @@ footer .copyright {
   display: flex;
   justify-content: center; /*I think this doesn't have align-items: center because it has text that is left aligned.*/
   flex-flow: row wrap;
+  background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat #333;
+  background-size: cover;
+  min-height: 500px;
 }
 
 .hero-area h1 {
@@ -282,7 +297,9 @@ input[type=button] {
 .features {
   display: flex;
   justify-content: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
+  background: url(../img/rawpixel-800820-unsplash1.jpg) center no-repeat #333;
+  background-size: cover;
 }
 
 .features h2 {
@@ -311,7 +328,7 @@ input[type=button] {
 .reviews {
   display: flex;
   justify-content: center;
-  flex-flow: wrap;
+  flex-flow: row wrap;
   background-color: #2a423a;
 }
 
@@ -471,6 +488,16 @@ input[type=button] {
     margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.25;
+  }
+
   /*Header*/
 
   header {
@@ -481,6 +508,10 @@ input[type=button] {
   header .content-wrapper {
     justify-content: space-between;
     width: 100%;
+  }
+
+  header figure {
+    width: 30%;
   }
 
   header nav {
@@ -496,6 +527,15 @@ input[type=button] {
   }
 
   /*Hero Area*/
+  .hero-area {
+    min-height: 600px;
+  }
+
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+  }
 
   /*Aside*/
 
@@ -513,6 +553,10 @@ input[type=button] {
 
   /*Features*/
 
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features article {
     display: flex;
     justify-content: center;
@@ -522,7 +566,7 @@ input[type=button] {
   }
 
   .features .features-item-description {
-    width: 50%;
+    width: 62%;
   }
 
   /*Reviews*/
@@ -532,8 +576,17 @@ input[type=button] {
     justify-content: space-between;
   }
 
+  .reviews h2 {
+    width: 85%;
+  }
+
   .reviews article div {
     width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
   }
 
   /*Footer*/
@@ -543,14 +596,24 @@ input[type=button] {
     margin: 100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer .contact {
     margin-bottom: 0;
+  }
+
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
   }
 
   footer .copyright {
@@ -578,6 +641,11 @@ input[type=button] {
     justify-content: space-between;
     align-items: flex-start;
   }
+
+  .contact-content h4 {
+    font-size: 1.5em;
+  }
+
 /************************FAQ PAGE*************************/
  .faq .content-wrapper {
    justify-content: space-between;
@@ -590,20 +658,43 @@ input[type=button] {
  .faq h2 {
    width: 100%;
  }
+
+ .faq h4, .faq p {
+   font-size: 0.875em;
+   line-height: 1.125;
+ }
 }
 
 @media only screen and (min-width: 1200px) {
   
   /*Desktop styles here*/
 
+  header {
+    padding: 15px 0;
+  }
+
   .content-wrapper {
     max-width: 960px;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3, h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.333;
   }
 
   /*Hero*/
 
   .hero-area h1 {
-    width: 60%;
+    font-size: 3.75em;
+    width: 80%;
   }
 
   /*Aside*/
@@ -614,6 +705,10 @@ input[type=button] {
 
   aside .content-wrapper .form-description, aside .content-wrapper .form {
     width: 30%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
   }
 
   /*Features*/
@@ -632,14 +727,33 @@ input[type=button] {
     width: 42%;
   }
 
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
+
+  footer h4 {
+    font-size: 1.875em;
+  }
+
   /************************ABOUT PAGE*********************/
 
   .mission h2, .contact-section .content-wrapper h2 {
     width: 95%;
   }
+
+  .contact-content h4 {
+    font-size: 1.875em;
+  }
+
   /************************FAQ PAGE*************************/
   .faq h2 {
     width: 100%;
+    font-size: 3em;
+  }
+
+  .faq h4, .faq p {
+    font-size: 1.125em;
+    line-height: 1;
   }
 }
 
