--- a/css/main.css
+++ b/css/main.css
@@ -94,14 +94,16 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
   font-size: 1em;
-  text-align: left;
+  font-family: 'Open Sans', sans-serif;
   color: #e2e3ed;
+  text-align: left;
 }
 
 ul, ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -111,15 +113,16 @@ a {
 
 h2 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.875em;
   font-weight: 500;
+  font-size: 1.875em;
+  margin: 0;
 }
 
 h3, h4 {
   font-family: 'Poppins', sans-serif;
-  margin: 20px 0;
-  font-size: 1.125em;
   font-weight: 500;
+  font-size: 1.125em;
+  margin: 20px 0;
 }
 
 p {
@@ -147,11 +150,11 @@ address {
 /*----------------Base Header - Footer Styles----------*/ 
 
 header, footer {
+  background-color: #202322;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background-color: #202322;
 }
 
 header {
@@ -159,11 +162,11 @@ header {
 }
 
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 0;
 }
 
 header figure {
@@ -175,27 +178,27 @@ header figure {
 }
 
 .header-divider  {
-  width: 100%;
-  height: 1px;
-  margin: 10px 0 20px 0;
   background: #3a3a3a;
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
-  display: flex;
-  justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
-  align-items: center;
-  flex-flow: row wrap;
   width: 60%;
   font-size: 1.125em;
   font-weight: 700;
   text-transform: uppercase;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header nav ul {
-  display: flex;
-  justify-content: space-around; /*Puts space between the FAQ and ABOUT sections*/
   width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 header nav ul li {
@@ -203,8 +206,8 @@ header nav ul li {
 }
 
 footer {
-  flex-direction: column;
   text-align: center;
+  flex-direction: column;
 }
 
 footer p {
@@ -223,23 +226,21 @@ footer .contact {
 footer .social-icons {
   display: flex;
   justify-content: space-around;
-  align-items: center;/*Puts space between the social icons; does not wrap around*/
+  align-items: center;
 }
 
 footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #527158;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  margin-left: 30px;
-  margin-right: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer .social-icons p i {
-  font-size: 1.3125;
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -251,13 +252,13 @@ footer .copyright {
 /*Hero Area*/
 
 .hero-area {
-  display: flex;
-  justify-content: center; /*I think this doesn't have align-items: center because it has text that is left aligned.*/
-  flex-flow: row wrap;
   background: url('../img/jake-melara-30679-unsplash.jpg');
-  background-position: center;
   background-size: cover;
+  background-position: center;
   min-height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
 }
 
 .hero-area h1 {
@@ -270,11 +271,11 @@ footer .copyright {
 /*Aside*/
 
 aside {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background-color: #527158;
 }
 
 aside .form {
@@ -306,12 +307,12 @@ input[type=button] {
 /*Features*/
 
 .features {
+  background: url('../img/rawpixel-800820-unsplash1.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  background: url(../img/rawpixel-800820-unsplash1.jpg);
-  background-position: center;
-  background-size: cover;
 }
 
 .features h2 {
@@ -330,23 +331,26 @@ input[type=button] {
   flex-flow: row wrap;
 }
 
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .features p {
   text-align: center;
   margin: 0;
 } 
 
-.features i {
-  font-size: 3.75em;
-  margin-bottom: 40px;
-}
-
 /*Reviews*/
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  background-color: #2a423a;
 }
 
 .reviews h2 {
@@ -361,11 +365,11 @@ input[type=button] {
 
 /*----------------About Page--------------------------*/
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background-color: #527158;
 }
 
 .map figure {
@@ -385,11 +389,11 @@ input[type=button] {
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background-color: #2a423a;
 }
 
 .contact-content p {
@@ -398,19 +402,20 @@ input[type=button] {
 
 /*------------------------FAQ Page-------------------------*/
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background-color: #527158;
+
 }
 
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 50px 0 0 0;
 }
 
 .faq h2 {
@@ -515,6 +520,8 @@ input[type=button] {
 @media only screen and (min-width: 768px) {
   
   /*Tablet styles here*/
+
+  /*General styles*/
   
   .content-wrapper {
     max-width: 640px;
@@ -539,8 +546,8 @@ input[type=button] {
   }
 
   header .content-wrapper {
-    justify-content: space-between;
     width: 100%;
+    justify-content: space-between;
   }
 
   header figure {
@@ -573,14 +580,14 @@ input[type=button] {
   /*Aside*/
 
   aside .content-wrapper {
+    margin: 50px 0;
     display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
-    margin: 50px 0;
   }
 
   aside .content-wrapper .form-description, aside .content-wrapper .form {
-    width: 35%;
+    width: 40%;
     margin: 0;
   }
 
@@ -600,6 +607,10 @@ input[type=button] {
 
   .features .features-item-description {
     width: 62%;
+  }
+
+  .features i {
+    margin-bottom: 30px;
   }
 
   /*Reviews*/
@@ -647,6 +658,11 @@ input[type=button] {
 
   footer p {
     line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copyright {
@@ -760,12 +776,12 @@ input[type=button] {
 
   /*Reviews*/
 
-  .reviews article div {
-    width: 42%;
-  }
-
   .reviews h2 {
     padding-bottom: 50px;
+  }
+
+  .reviews article div {
+    width: 42%;
   }
 
   footer h4 {
@@ -774,13 +790,13 @@ input[type=button] {
 
   /************************ABOUT PAGE*********************/
 
+  .map figure {
+    padding-bottom: 37.5%;
+  }
+
   .mission h2, .contact-section .content-wrapper h2 {
     width: 95%;
     font-size: 3em;
-  }
-
-  .map figure {
-    padding-bottom: 37.5%;
   }
 
   .contact-content h4 {
